# indigenous-harvesters

./: .gitignore  CHANGELOG.md  CLAUDE.md  Taskfile.yml  pyproject.toml
.github/workflows/: test.yml
notebooks/: 00_cirnac_profile_scraping.ipynb  01_fn_website_scraping.ipynb  analyze_ontario_gap.py  check_email_coverage.py  export_coverage_spreadsheet.py  fix_bc_unmatched.py  generate_targets.py  google_email_search.py  import_civicinfo_emails.py  import_on_emails.py  import_province_emails.py  match_civicinfo_to_nc.py  scrape_civicinfo.py  scrape_on_emails.py  scrape_province_emails.py
notebooks/data/: .gitignore
src/harvest/: __init__.py  cli.py
src/harvest/config/: sources.yaml
src/harvest/core/: __init__.py  envelope.py  harvester.py  license_tracker.py  nc_client.py  nc_publisher.py  registry.py  runner.py
src/harvest/harvesters/: __init__.py
tests/: conftest.py  test_cli.py  test_envelope.py  test_license_tracker.py  test_nc_client.py  test_nc_publisher.py  test_registry.py  test_runner.py
tests/fixtures/: sample_nc_response.json
