[project]
name = "indigenous-harvesters"
version = "0.1.0"
description = "Python harvesting tools for Indigenous content — feeds North Cloud pipeline"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "indigenous-taxonomy @ git+https://github.com/jonesrussell/indigenous-taxonomy.git@main#subdirectory=generated/python",
]

[project.scripts]
harvest = "harvest.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "mypy>=1.10",
    "ruff>=0.4",
]
notebooks = [
    "jupyter>=1.0",
    "pandas>=2.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
